@@ -1,5 +1,7 @@
 Possible compatibility problems with earlier versions marked with '*'.
 
+Added several OID's.
+
 Changed retrieval module so that we can load records with no abstract
 syntax defined. Tagpaths in these records are fully composed of string tags.
 
